ombi/ombi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ombi-deployment
  namespace: drag-media
spec:
  replicas: 1 # Adjust as needed
  selector:
    matchLabels:
      app: ombi
  template:
    metadata:
      labels:
        app: ombi
    spec:
      containers:
        - name: ombi-container
          image: lscr.io/linuxserver/ombi:latest
          ports:
            - containerPort: 3579
          volumeMounts:
            - name: ombi-volume
              mountPath: /config
      volumes:
        - name: ombi-volume
          persistentVolumeClaim:
            claimName: ombi-pvc
      nodeSelector:
        intent: frigga
---
apiVersion: v1
kind: Service
metadata:
  name: ombi-svc
  namespace: drag-media
spec:
  selector:
    app: ombi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3579
  type: LoadBalancer
